--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
             <version>2.8.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.sourceforge.nekohtml</groupId>
+            <artifactId>nekohtml</artifactId>
+            <version>1.9.21</version>
+        </dependency>
+
     </dependencies>
 
     <build>
