--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,5 @@ buildNumber.properties
 !/.mvn/wrapper/maven-wrapper.jar
 
 # End of https://www.gitignore.io/api/java,maven,intellij
+
+filmclub\.iml
