--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
             <version>2.9.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.1.2.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
